--- a/vc16/TSE.vcxproj
+++ b/vc16/TSE.vcxproj
@@ -2741,6 +2741,7 @@
     <ClCompile Include="..\engine\renderInstance\renderObjectMgr.cpp" />
     <ClCompile Include="..\engine\renderInstance\renderRefractMgr.cpp" />
     <ClCompile Include="..\engine\renderInstance\renderTranslucentMgr.cpp" />
+    <ClCompile Include="..\engine\renderInstance\renderZOnlyMgr.cpp" />
     <ClCompile Include="..\engine\sceneGraph\detailManager.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
       <BasicRuntimeChecks Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">EnableFastChecks</BasicRuntimeChecks>
@@ -3879,6 +3880,7 @@
     <ClInclude Include="..\engine\renderInstance\renderObjectMgr.h" />
     <ClInclude Include="..\engine\renderInstance\renderRefractMgr.h" />
     <ClInclude Include="..\engine\renderInstance\renderTranslucentMgr.h" />
+    <ClInclude Include="..\engine\renderInstance\renderZOnlyMgr.h" />
     <ClInclude Include="..\engine\resources\resource.h" />
     <ClInclude Include="..\engine\scenegraph\detailManager.h" />
     <ClInclude Include="..\engine\sceneGraph\lightManager.h" />
